--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -34,6 +34,10 @@
   version = "3.3.2"
 
 [[constraint]]
+  name = "github.com/google/uuid"
+  version = "1.1.1"
+
+[[constraint]]
   name = "github.com/golang/protobuf"
   version = "1.0.0"
 
